samples/_failures_safe/1761042593_0c1f4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23dae1ff.c: In function ‘main’:
./samples/SAFE/__tmp_23dae1ff.c:160:9: error: expected declaration or statement at end of input
  160 |         if (input_len == 1 && input[0] == 'Q' && sm.state == STATE_READING) {
      |         ^~
./samples/SAFE/__tmp_23dae1ff.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23dae1ff.c:160:9: error: expected declaration or statement at end of input
